refactor: change models type used in controller
