# docs/swagger.json
@@ -23,7 +23,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/controllers.Book"
+                                "$ref": "#/definitions/models.Book"
                             }
                         }
                     }
@@ -40,23 +40,20 @@
                 "summary": "Create book",
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "author",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "title",
-                        "in": "query",
-                        "required": true
+                        "description": "CreateBookInput to create",
+                        "name": "createBook",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateBookInput"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.Book"
+                            "$ref": "#/definitions/models.Book"
                         }
                     }
                 }
@@ -85,7 +82,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.Book"
+                            "$ref": "#/definitions/models.Book"
                         }
                     }
                 }
@@ -140,7 +137,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.UpdateBookInput"
+                            "$ref": "#/definitions/models.UpdateBookInput"
                         }
                     }
                 ],
@@ -148,7 +145,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.Book"
+                            "$ref": "#/definitions/models.Book"
                         }
                     }
                 }
@@ -156,7 +153,7 @@
         }
     },
     "definitions": {
-        "controllers.Book": {
+        "models.Book": {
             "type": "object",
             "properties": {
                 "author": {
@@ -170,7 +167,22 @@
                 }
             }
         },
-        "controllers.UpdateBookInput": {
+        "models.CreateBookInput": {
+            "type": "object",
+            "required": [
+                "author",
+                "title"
+            ],
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateBookInput": {
             "type": "object",
             "properties": {
                 "author": {
