# models/book.go
@@ -1,5 +1,15 @@
 package models
 
+type UpdateBookInput struct {
+	Title  string `json:"title"`
+	Author string `json:"author"`
+}
+
+type CreateBookInput struct {
+	Title  string `json:"title" binding:"required"`
+	Author string `json:"author" binding:"required"`
+}
+
 type Book struct {
 	ID     uint   `json:"id" gorm:"primary_key"`
 	Title  string `json:"title"`
